--- a/Rein/config.debug.json
+++ b/Rein/config.debug.json
@@ -1,5 +1,5 @@
 ﻿{
-  "token": "ODA4Mjg5NDA3MjMxODUyNTQ0.YCEYKw.0j3E_ReSMgwIlsh-GFlaoNoZwYI",
+  "token": "",
   "device_read": "ライン (Yamaha NETDUETTO Driver (WDM))",
   "device_sound_effect": "ライン (Yamaha NETDUETTO Driver (WDM))",
   "bouyomichan_path": "D:\\Program Files (x86)\\BouyomiChan_0_1_11_0_Beta21\\BouyomiChan.exe",
